Add html processor. Does environments, CDN references and runtimes. Code is messy but it works.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "request": ""
   },
   "devDependencies": {
-    "mocha": ""
+    "mocha": "0.14.x"
   },
-  "optionalDependencies": {}
+  "optionalDependencies": {},
+  "scripts": {
+    "install": "make"
+  }
 }
