--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "node": "~0.6.10"
   },
   "dependencies": {
-    "jsdom": "",
-    "async": "",
-    "request": ""
+    "async": "0.1.x",
+    "commander": "0.5.x",
+    "jsdom": "0.2.x",
+    "request": "2.x",
+    "underscore": "1.x",
+    "underscore.string": "2.x"
   },
   "devDependencies": {
-    "mocha": "0.14.x"
+    "mocha": "0.14.x",
+    "should": "0.6.x"
   },
   "optionalDependencies": {},
   "scripts": {
