--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "author": "Stijn Debrouwere <stijn@stdout.be> (http://stdout.be)",
   "name": "envv",
   "description": "Environments for client-side code: execute or skip code depending on whether you're deploying to a production server or just developing.",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "repository": {
     "url": "git@github.com:stdbrouw/envv.git"
   },
   "main": "lib/index.js",
+  "bin" : "./bin/envv",
   "engines": {
     "node": "~0.6.10"
   },
